Fix tab alignment

--- a/src/components/ChangeCategoryButton.scss
+++ b/src/components/ChangeCategoryButton.scss
@@ -10,7 +10,4 @@
         border-style: none;
         color: $brand-pane-alt-dark;
     }
-    &.hidden{
-        display:none;
-    }
 }
