--- a/src/components/LeaderboardPane.scss
+++ b/src/components/LeaderboardPane.scss
@@ -1,3 +1,26 @@
-.LeaderBoardPane{
-
+.LeaderboardPane{
+    .TabBar {
+        display: flex;
+        .Left{
+            display:flex;
+            flex:1;
+            justify-content: flex-start;
+            align-items: center;
+            .hidden{
+                display:none;
+            }
+        }
+        .Middle{
+            display:flex;
+            flex:1;
+            justify-content: center;
+            align-items: center;
+        }
+        .Right{
+            display:flex;
+            flex:1;
+            justify-content: flex-end;
+            align-items: center;
+        }
+    }
 }
